--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 1.1rem;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 @font-face {
@@ -25,9 +27,23 @@ input, label {
     display: block;
 }
 
+label {
+    font-size: 0.65rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2ch;
+    line-height: 3ch;
+}
+
 form {
     display: flex;
     flex-wrap: wrap;
+    gap: 3rem;
+}
+
+input {
+    border: 1px solid #E5E7EB;
+    border-radius: 3px;
+
 }
 
 h1 {
@@ -35,6 +51,10 @@ h1 {
     color: white;
     font-size: 4rem;
     font-weight: 900;
+}
+
+.first-column div, .second-column div {
+    margin:0.9rem 0
 }
 
 .input-section {
@@ -55,8 +75,11 @@ h1 {
     /* min-width: 300px; */
     min-width: 500px; 
     background-color: rgb(255, 255, 255);
-}
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
 .side-hero {
     height: 100vh;
@@ -81,6 +104,18 @@ h1 {
     top: 192px;
 }
 
+.header, .input-section, .submit-section {
+    padding: 2rem;
+}
+
+.header > p, .input-section > p {
+    font-weight: 600;
+}
+
+.input-section > p {
+    margin-top: -10px;
+    margin-bottom: 5px;
+}
 
 
 /* Media queries */
