--- a/style.css
+++ b/style.css
@@ -58,6 +58,30 @@ h1 {
     font-weight: 900;
 }
 
+a {
+    text-decoration: none;
+    color: #596D48;
+    font-weight: 600;
+}
+
+button {
+    border-radius: 9px;
+    padding: .7em 2em;
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: #596D48;
+    outline: none;
+    border: none;
+    box-shadow: 1px 3px 10px rgba(0,0,0,0.2);
+}
+
+.submit-section a, p {
+    margin-top: 2rem;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
 .first-column div, .second-column div {
     margin:0.9rem 0
 }
