--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif
 }
 
@@ -18,9 +18,7 @@ html body {
 }
 
 img {
-    height: 120px;
-
-
+    height: 150px;
 }
 
 input, label {
@@ -54,8 +52,8 @@ input:focus {
 h1 {
     font-family: 'Norse-Bold';
     color: white;
-    font-size: 4rem;
-    font-weight: 900;
+    font-size: 6.5rem;
+    font-weight: 400;
 }
 
 a {
@@ -88,7 +86,8 @@ button {
 
 .input-section {
     border: 0.5px solid #E5E7EB;
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+    box-shadow: 0px 2px 15px rgba(0,0,0,0.1);
+    background-color: rgb(255, 255, 255);
 }
 
 .form-container {
@@ -104,7 +103,7 @@ button {
     width: 60vw;
     /* min-width: 300px; */
     min-width: 500px; 
-    background-color: rgb(255, 255, 255);
+    background-color: #f0f0f0;
 
     display: flex;
     flex-direction: column;
@@ -114,7 +113,7 @@ button {
 .side-hero {
     height: 100vh;
     width: 40vw;
-    min-width: 400px; 
+    min-width: 500px; 
     background-image: url(./images/green-stuff.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -125,7 +124,7 @@ button {
     display: flex;
     background-color: rgba(0, 0, 0, 0.3);
     gap: .5rem;
-    padding: 16px;
+    padding: 1px;
 
     justify-content: center;
     align-items: center;
@@ -139,6 +138,7 @@ button {
 }
 
 .header > p, .input-section > p {
+    font-size: 1.2rem;
     font-weight: 600;
 }
 
@@ -152,26 +152,51 @@ button {
 @media screen and (max-width: 850px) {
     .form-container {
         flex-direction: column;
-       
     }
 
-    .side-hero, .form-section {
+    .form-section {
         width: 100vw;
-        height: 30rem;
+    }
+
+    .side-hero {
+
+        width: 100vw;
+        height: 20rem;
     }
 
     .odin-container {
         position: relative;
-        top: 120px;
+        height: 5rem;
+        top: 35px;
+        padding: 0px;
+        margin-top: 2rem;
+    }
+
+    .input-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     h1 {
-        font-size: 6rem;
+        font-size: 4rem;
     }
 
     img {
-        height: 170px;
+        height: 80px;
     }
 
+    .submit-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
 
+@media screen and (max-width: 500px) {
+    .side-hero {
+        width: 100vw;
+    }    
 }
