--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html body {
     background-color: black;
-    max-width: 100vw;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -91,15 +90,15 @@ button {
 }
 
 .form-container {
-    /* min-height: 90vh; */
-    max-width: 100vw;
     display: flex;
     justify-content: center;
+    min-height: 100vh;
+
 
 }
 
 .form-section {
-    min-height: 100vh;
+    /* max-height: 100vh; */
     max-width: 60vw;
     /* min-width: 300px; */
     min-width: 500px; 
@@ -111,7 +110,7 @@ button {
 }
 
 .side-hero {
-    max-height: 100vh;
+    /* max-height: 100vh; */
     width: 40vw;
     min-width: 500px; 
     background-image: url(./images/green-stuff.jpg);
@@ -147,19 +146,18 @@ button {
     margin-bottom: 5px;
 }
 
-
 /* Media queries */
-@media (max-width: 850px) {
+@media (max-width: 980px) {
     .form-container {
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        /* min-width: 400px; */
     }
 
     .form-section {
         padding: 0;
         min-width: 100vw;
+        min-height: 30px;
     }
 
     .side-hero {
@@ -181,7 +179,6 @@ button {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0;
     }
 
     h1 {
