--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-html body {
-    background-color: black;
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 1.5rem;
-    font-family: Arial, Helvetica, sans-serif
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+
+    background-color: black;
 }
 
 @font-face {
@@ -17,11 +18,22 @@ html body {
 }
 
 img {
-    height: 150px;
+    height: 120px;
+}
+
+h1 {
+    font-family: 'Norse-Bold';
+    color: white;
+    font-size: 4rem;
+    font-weight: 100;
 }
 
 input, label {
     display: block;
+}
+
+input {
+    box-sizing: border-box;
 }
 
 label {
@@ -48,12 +60,7 @@ input:focus {
     outline: none !important;
 }
 
-h1 {
-    font-family: 'Norse-Bold';
-    color: white;
-    font-size: 6.5rem;
-    font-weight: 400;
-}
+
 
 a {
     text-decoration: none;
@@ -80,7 +87,7 @@ button {
 }
 
 .first-column div, .second-column div {
-    margin:0.9rem 0
+    margin: 0.9rem;
 }
 
 .input-section {
@@ -92,17 +99,14 @@ button {
 .form-container {
     display: flex;
     justify-content: center;
-    min-height: 100vh;
-
-
+    height: 100vh;
+    margin: 0 8rem;
+    
 }
 
 .form-section {
-    /* max-height: 100vh; */
-    max-width: 60vw;
-    /* min-width: 300px; */
-    min-width: 500px; 
     background-color: #f0f0f0;
+    width: 60vw;
 
     display: flex;
     flex-direction: column;
@@ -110,20 +114,18 @@ button {
 }
 
 .side-hero {
-    /* max-height: 100vh; */
-    width: 40vw;
-    min-width: 500px; 
     background-image: url(./images/green-stuff.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 40vw;
 }
 
 .odin-container {
     display: flex;
     background-color: rgba(0, 0, 0, 0.3);
     gap: .5rem;
-    padding: 1px;
+    padding: 0px;
 
     justify-content: center;
     align-items: center;
@@ -133,66 +135,59 @@ button {
 }
 
 .header, .input-section, .submit-section {
-    padding: 2rem;
-}
-
-.header > p, .input-section > p {
-    font-size: 1.2rem;
-    font-weight: 600;
-}
-
-.input-section > p {
-    margin-top: -10px;
-    margin-bottom: 5px;
+    padding: 1.5rem;
 }
 
 /* Media queries */
-@media (max-width: 980px) {
+
+@media (max-width: 850px) {
     .form-container {
+        margin: 0;
         flex-direction: column;
-        justify-content: flex-start;
         align-items: center;
-    }
 
-    .form-section {
         padding: 0;
-        min-width: 100vw;
-        min-height: 30px;
+        margin: 0;
     }
 
-    .side-hero {
-        min-height: 200px;
-        min-width: 100vw;
-
+    .odin-container h1, img {
+        height: 100px;
+        font-size: 100px;
     }
 
     .odin-container {
+        justify-content: center;
+
         position: relative;
-        height: 5rem;
-        top: 35px;
-        padding: 0px;
-        margin-top: 2rem;
+        top: -0px;
+        
+    }
+
+    .side-hero, .form-section {
+        width: 100vw;
+        min-width: 200px;
+    }
+
+    .first-column {
+        margin-bottom: -100px;
     }
 
     .input-section {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
     }
 
-    h1 {
-        font-size: 4rem;
-    }
-
-    img {
-        height: 80px;
+    form {
+        display: flex;
+        justify-content: center;
     }
 
     .submit-section {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
     }
+
+
 }
