--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ button {
     }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 512px) {
     .first-column {
         margin-bottom: -60px;
     }
@@ -198,5 +198,6 @@ button {
 
     .odin-container {
         padding: 0;
+        top: 0px;
     }
 }
